# whatifact

./: .gitignore  .pylintrc  LICENSE  README.md  confetti.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  workflow.yml
antifact/: __init__.py  _server.py  _utilities.py  _widgets.py  antifact.py
antifact/resources/: style.css
confetti/: confetti.py  inference.py  logger.py  preprocessing.py  widgets.py
confetti/css/: style.css
css/: style.css
examples/: example_LightGBM.py  test.py
src/: inference.py  preprocessing.py  widgets.py
tests/: test_antifact.py  test_confetti.py  test_inference.py  test_preprocessing.py  test_utilities.py  test_whatifact.py  test_widgets.py
whatifact/: __init__.py  _server.py  _utilities.py  _widgets.py  whatifact.py
