[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "whatifact"
description = "Counter factual exploration utility"
authors = [{name = "Uri Gottlieb", email = "urigott@gmail.com"}]
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "shiny>=1.2.1",
]

[tool.setuptools]
packages = ["whatifact"]

[tool.setuptools.package-data]
whatifact = ["resources/*.*"]
